This file is here to allow devs to easily add stuff in the release
notes for the next release, it allows easy syncing with the release
team, since you don't have to be around when the release takes
place...

Just dump whatever you want to have mentionned in the release notes here.

The release team can empty this file after each Release..

The campaign "An Orcish Incursion" has been heavily revised and added to 
mainline.