@@ -84,9 +84,9 @@ void truncate_message(t_string& str)
 	const size_t max_message_length = 256;
 	// The string send can contain utf-8 so truncate as wide_string otherwise
 	// an corrupted utf-8 string can be returned.
-	wide_string newstr = utils::string_to_wstring(str.str());
-	newstr.resize(minimum<size_t>(str.size(),max_message_length));
-	str = utils::wstring_to_string(newstr);
+	std::string tmp = str.str();
+	utils::truncate_as_wstring(tmp, max_message_length);
+	str = tmp;
 }
 
 } // end anon namespace
