@@ -57,6 +57,7 @@ Version 1.3.8+svn:
      and thus the limit has been reduced to 32 characters again (bug #6855)
    * now using :n in debug mode will skip past linger mode as intended
    * fix a bug with [endlevel] result=continue_no_save
+   * fixed a bug where some strings were resized in utf-8 unaware mode
 
 Version 1.3.8:
  * campaigns:
