@@ -9,3 +9,5 @@ The release team can empty this file after each Release..
 
 The campaign "An Orcish Incursion" has been heavily revised and added to 
 mainline.
+
+The MP DoS attacks have been fixed, both in server and client
